# sonic-swss-common

./: BUILD  MODULE.bazel
pyext/: BUILD
pyext/py2/: BUILD
pyext/py3/: BUILD
tests/: BUILD
